Diseño de Encabezado y Barra de Navegación
Modifiqué los aspectos generales de la pagina y hice el diseño de la barra de navegación y el encabezado. Además de incluir comentarios de las secciones para organizar mejor el CSS.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#Servicios">Nuestros Servicios</a></li>
                 <li><a href="#Reseñas">Nuestras Reseñas</a></li>
                 <li><a href="#Contactenos">Contactenos</a></li>
-                <li><a href="/registroUsuarios.html">Registrarse</a></li>
+                <li><a href="/pagina_Registro.html">Registrarse</a></li>
             </ul>
         </nav>
         <section class="banner">
