Diseño Banner y Seccion "Sobre nosotros"
Hice el diseño del Banner y de la sección "Sobre nosotros". Además de añadir una imagen en ambas.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section id="Contalcia">
             <h2>A cerca de Nosotros</h2>
             <p>Somos una empresa creada como parte de nuestro proyecto formativo de la media tecnica</p>
+            <img src="/img/Contalcia_logo2.jpg" alt="contalcia_Presetación.jpg">
         </section>
         <section id="Servicios">
             <h2 >Servicios</h2>
