Diseño sección "Reseñas" y Footer
Hice el diseño de la sección de las reseñas y el diseño del footer, además de que cambié el nombre de los links de referencias debido a que no estaban siendo llamados.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_logo2.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="/Proyecto-Final-Jovenes-Creativos/style.css">
     <title>Contalcía</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
                 <li><a href="#Servicios">Nuestros Servicios</a></li>
                 <li><a href="#Reseñas">Nuestras Reseñas</a></li>
                 <li><a href="#Contactenos">Contactenos</a></li>
-                <li><a href="/pagina_Registro.html">Registrarse</a></li>
+                <li><a href="/Proyecto-Final-Jovenes-Creativos/pagina_Registro.html">Registrarse</a></li>
             </ul>
         </nav>
         <section class="banner">
@@ -27,15 +28,15 @@
         <section id="Contalcia">
             <h2>A cerca de Nosotros</h2>
             <p>Somos una empresa creada como parte de nuestro proyecto formativo de la media tecnica</p>
-            <img src="/img/Contalcia_logo2.jpg" alt="contalcia_Presetación.jpg">
+            <img src="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_logo2.jpg" alt="contalcia_Presetación.jpg">
         </section>
         <section id="Servicios">
             <h2 >Servicios</h2>
             
             <div class="img_productos">
-                <img src="/img/Contalcia_producto.jpg" alt="contalcia_producto.jpg">
+                <img src="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_producto.jpg" alt="contalcia_producto.jpg">
                 <h3 id="Nombre_producto">Contalcía</h3>
-                <img src="/img/Contalcia_producto2.jpeg" alt="contalcia_producto_2">
+                <img src="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_producto2.jpeg" alt="contalcia_producto_2">
             </div>
             <p>“No bajes la meta, aumenta el esfuerzo”</p>
             <h3 >Precio</h3>
