--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
                 <li><a href="#Servicios">Nuestros Servicios</a></li>
                 <li><a href="#Reseñas">Nuestras Reseñas</a></li>
                 <li><a href="#Contactenos">Contactenos</a></li>
+                <li><button id="inicio_Sesion">Iniciar Sesión</button></li>
                 <li><a href="/Proyecto-Final-Jovenes-Creativos/pagina_Registro.html">Registrarse</a></li>
             </ul>
         </nav>
         <section class="banner">
             <h2>Contalcía</h2>
-            
         </section>
     </header>
+    <div id="ventana_Login" class="ventana">
+        <div class="ventana_contenido">
+            <span class="close" id="close_Login">&times;</span>
+            <h2>Iniciar Sesión</h2>
+            <form id="formLogin">
+                <label for="loginEmail">Correo electrónico:</label>
+                <input type="email" id="loginEmail" required><br>
+                <label for="loginPassword">Contraseña:</label>
+                <input type="password" id="loginPassword" required><br>
+                <button type="submit">Iniciar Sesión</button>
+            </form>
+        </div>
+    </div>
+    
     <main>
         <section id="Contalcia">
             <h2>A cerca de Nosotros</h2>
@@ -61,7 +75,7 @@
             <p>Reseña</p>
         </section>
     </main>
-    <footer>
+    <footer id="Contactenos">
         <div class="footer-contenedor">
             <div class="footer-seccion nosotros">
                 <h3>Contalcia</h3>
@@ -86,6 +100,6 @@
             <p>&copy; 2024 Contalcia | Todos los derechos reservados</p>
         </div>
     </footer>
-    <script src="/app.js"></script>
+    <script src="/Proyecto-Final-Jovenes-Creativos/app.js"></script>
 </body>
 </html>
