Información de la pagina Principal
Ingresé la información que complementa las diferentes secciones de la pagina principal.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
     <main>
         <section id="Contalcia">
             <h2>A cerca de Nosotros</h2>
-            <p>Somos una empresa creada como parte de nuestro proyecto formativo de la media tecnica</p>
+            <p>
+                Somos una empresa creada como parte de nuestro proceso formativo de media Tecnica.
+                Contalcía está dedicada a la fabricación de alcancías electrónicas con un
+                innovador sistema de bloqueo automático. Este sistema asegura que la alcancía no
+                se abra hasta que se alcance la meta financiera establecida por el usuario.
+                Nuestra misión es fomentar el ahorro de manera segura y divertida, ayudando a nuestros
+                clientes a cumplir sus objetivos de ahorro sin tentaciones de gastar antes de tiempo.
+            </p>
             <img src="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_logo2.jpg" alt="contalcia_Presetación.jpg">
         </section>
         <section id="Servicios">
@@ -53,26 +60,32 @@
                 <img src="/Proyecto-Final-Jovenes-Creativos/img/Contalcia_producto2.jpeg" alt="contalcia_producto_2">
             </div>
             <p>“No bajes la meta, aumenta el esfuerzo”</p>
-            <h3 >Precio</h3>
+            <h3 >Precio: 204.900$ COP</h3>
+            
             <div class="producto">
-                <h3>Producto</h3>
+                <h3>Producto:</h3>
                 <p>
-                    El producto es una alcancia inteligente
+                    El producto incluye un display digital que muestra el progreso del ahorro en tiempo real.
+                    El sistema de bloqueo electrónico se configura para una cantidad específica de ahorro,
+                    y solo se desbloquea cuando esa cantidad se alcanza. El diseño es robusto y seguro,
+                    asegurando la protección del dinero
                 </p>
-                <h3>Propuesta de Valor</h3>
+                <h3>Propuesta de Valor:</h3>
                 <p>
-                    La Propuesta es :
+                    Ofrecemos una herramienta única para gestionar el ahorro, con un sistema que motiva
+                    a los usuarios a cumplir sus objetivos sin tentaciones de gastar antes de tiempo.
                 </p>
-                <h3>Innovación</h3>
+                <h3>Innovación:</h3>
                 <p>
-                    La inonvación se basa en:
+                    Nuestras alcancías cuentan con un contador digital y un sistema de bloqueo
+                    automático que se activa hasta que se alcanza el monto de ahorro programado.
                 </p>
             </div>
         </section>
         <section id="Reseñas">
             <h2>Reseñas de Nuestros Clientes</h2>
-            <p>Reseña</p>
-            <p>Reseña</p>
+            <p>"Producto innovador que fomenta el buen habito ahorrador" - Cesar (Instructor SENA)</p>
+            <p>"Producto muy creativo que enseña el valor y trabajo del ahorro" - Sandra (Instructora de Media Tecnica)</p>
         </section>
     </main>
     <footer id="Contactenos">
